...
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="unlabeled"
        app:itemIconSize="40dp"
        />

    <EditText
        android:id="@+id/chatselect_id_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:text=""
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/chatselection_recycler_list"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <Button
        android:id="@+id/create_chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Chat"
        app:layout_constraintBottom_toBottomOf="@+id/chatselect_id_input"
        app:layout_constraintEnd_toEndOf="parent" />

...
